--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
   <title>Hangman Game</title>
   <script type="text/javascript" src="../Hangman-Game/assets/javascript/game.js"></script>
   <link rel="stylesheet" type="text/css" href="../Hangman-Game/assets/css/style.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 </head>
-<body>
+<body class="container">
     <div>
       <h1>Hangman Game</h1>
     </div>
@@ -23,7 +24,7 @@
     <input name="yourGuess" id="yourGuess" type="hidden" size="5" maxlength="1">
     <!--<input name="ratebutton" type="button" value="Guess" onClick="letterInWord()">-->
     <h3><p id="notInWord">Letters Already Guessed:</p></h3>
-    <img src="http://www.writteninpencil.de/Projekte/Hangman/hangman0.png" id="hangman"><br />
+    <img src="../Hangman-Game/assets/images/hangman0.png" id="hangman"><br />
     <input name="refresh" type="button" value="New Game" onClick="location.reload()">
     </form>
 </body>
